# Branchwise

./: .env.example  .gitignore  README.md  implementation_plan.md  pom.xml  prompt.md  pyproject.toml
branchwise/: __init__.py  config.py  main.py
branchwise/core/: analyzer.py
branchwise/integrations/: base.py  bitbucket_client.py  github.py  gitlab_client.py
branchwise/llm/: client.py
branchwise/utils/: diff_parser.py
core-models/: pom.xml
core-models/src/main/java/com/example/aicodereviewer/coremodels/: PullRequestEvent.java  package-info.java
tests/: __init__.py  test_analyzer.py  test_cli.py  test_config.py  test_diff_parser.py  test_integration_clients.py
webhook-service/: pom.xml
webhook-service/src/main/java/com/example/aicodereviewer/webhook/: WebhookServiceApplication.java  package-info.java
webhook-service/src/main/java/com/example/aicodereviewer/webhook/controller/: GithubWebhookController.java
webhook-service/src/test/java/com/example/aicodereviewer/webhook/controller/: GithubWebhookControllerTest.java
